--- a/app/core/templates/core/reports/lotnumsreport.html
+++ b/app/core/templates/core/reports/lotnumsreport.html
@@ -2,7 +2,7 @@
 
 
 {% block content %}
-<h1>Lot Numbers for {{ blendinfo.part_number }} {{ blendinfo.description }}</h1>
+<h1>Lot Numbers for {{ blendinfo.part_number }} {{ blendinfo.desc }}</h1>
     <div>
         <a href="/core/lotnumform">
             <button class="btn btn-secondary">New Lot Number</button>
