--- a/app/core/templates/core/reports/upcomingrunsreport.html
+++ b/app/core/templates/core/reports/upcomingrunsreport.html
@@ -2,5 +2,31 @@
 
 
 {% block content %}
-
+<h1>All Upcoming Runs for {{ blendinfo.part_number }} {{ blendinfo.desc }}</h1>
+    <div class="table-responsive-sm">
+        <table class="table text-left table-bordered">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Blend</th>
+                    <th scope="col">Description</th>
+                    <th scope="col">Run Qty</th>
+                    <th scope="col">Blend Qty OH</th>
+                    <th scope="col">Start Time</th>
+                    <th scope="col">Line</th>
+                    <th scope="col">OH After Run</th>
+                </tr>
+            </thead>
+            {% for item in upcomingruns %}
+                <tr>
+                    <td>{{ item.blend_pn }}</td>
+                    <td>{{ item.blend_desc }}</td>
+                    <td>{{ item.adjustedrunqty|floatformat:2 }}</td>
+                    <td>{{ item.qtyonhand|floatformat:2 }}</td>
+                    <td>{{ item.starttime|floatformat:2 }}</td>
+                    <td>{{ item.prodline }}</td>
+                    <td>{{ item.oh_after_run|floatformat:2 }}</td>
+                </tr>
+            {% endfor %}
+        </table>
+    </div>
 {% endblock content %}
