added blndcounts and accoutrements

--- a/app/core/templates/core/reports/startronreport.html
+++ b/app/core/templates/core/reports/startronreport.html
@@ -18,13 +18,23 @@
             </thead>
             {% for item in startronruns %}
                 <tr>
-                    <td>{{ item.blend_pn }}</td>
-                    <td>{{ item.blend_desc }}</td>
-                    <td>{{ item.adjustedrunqty|floatformat:2 }}</td>
-                    <td>{{ item.qtyonhand|floatformat:2 }}</td>
-                    <td>{{ item.starttime|floatformat:2 }}</td>
-                    <td>{{ item.prodline }}</td>
-                    <td>{{ item.oh_after_run|floatformat:2 }}</td>
+                    {% if item.oh_after_run < 0 %}
+                        <td style="background-color:#FE620E">{{ item.blend_pn }}</td>
+                        <td style="background-color:#FE620E">{{ item.blend_desc }}</td>
+                        <td style="background-color:#FE620E">{{ item.adjustedrunqty|floatformat:2 }}</td>
+                        <td style="background-color:#FE620E">{{ item.qtyonhand|floatformat:2 }}</td>
+                        <td style="background-color:#FE620E">{{ item.starttime|floatformat:2 }}</td>
+                        <td style="background-color:#FE620E">{{ item.prodline }}</td>
+                        <td style="background-color:#FE620E">{{ item.oh_after_run|floatformat:2 }}</td>
+                    {% else %}
+                        <td>{{ item.blend_pn }}</td>
+                        <td>{{ item.blend_desc }}</td>
+                        <td>{{ item.adjustedrunqty|floatformat:2 }}</td>
+                        <td>{{ item.qtyonhand|floatformat:2 }}</td>
+                        <td>{{ item.starttime|floatformat:2 }}</td>
+                        <td>{{ item.prodline }}</td>
+                        <td>{{ item.oh_after_run|floatformat:2 }}</td>
+                    {% endif %}
                 </tr>
             {% endfor %}
         </table>
