--- a/app/core/templates/core/reportcenter.html
+++ b/app/core/templates/core/reportcenter.html
@@ -26,8 +26,8 @@
                 <table id="reportformtable">
                     {{ reportform.as_table }}
                 </table>
-                <a href="http://google.com" id="reportlink">
-                    <input type="submit" id="submitbutton" disabled="True" name="submit" value="Generate Report" class="btn btn-secondary">
+                <a href="http://google.com" id="reportlink" target="blank">
+                    <input type="submit" id="submitbutton" disabled="True" target="blank" name="submit" value="Generate Report" class="btn btn-secondary">
                 </a>
                 <div>
                     <h2 id='itemdesc'></h2>
