--- a/app/core/templates/core/reportcenter.html
+++ b/app/core/templates/core/reportcenter.html
@@ -30,6 +30,7 @@
                     <h2 id='itemdesc'></h2>
                 </div>
                 </form>
+                {% comment %} 
                 <div>
                     <h2>Chemicals Short in the Next 3 Weeks:</h2>
                     {% for item in chemsShort %}
@@ -40,7 +41,8 @@
                         </div>
                         {% endif %}
                     {% endfor %}
-                </div>
+                </div> 
+                {% endcomment %}
     </div>
     <!-- Item Code Dropdown Script must be inline for Django template tags to function -->
     <script>
