--- a/app/core/templates/core/reportcenter.html
+++ b/app/core/templates/core/reportcenter.html
@@ -53,51 +53,44 @@
                         "{{CiItem.itemcode}}",
                     {% endfor %}
                 ];
-                //Autofill description when choice is selected
-                $("#id_part_number").autocomplete({
+
+                $("#id_part_number").autocomplete({ // Sets up a dropdown for the part number field 
                     source: availableItemCodes,
-                    change: function( event, ui ) {
-                        var item = $('#id_part_number').val().toUpperCase()
-                        $('#id_part_number').val(item)
-                        $.getJSON('itemcodedesc_request/',{item:item}, 
+                    change: function( event, ui ) { // Autofill desc when change event happens to the part_number field 
+                        var item = $('#id_part_number').val().toUpperCase() // Make sure the part_number field is uppercase
+                        $.getJSON('itemcodedesc_request/',{item:item}, // send json request with part number in request url
                             function(data) {
-                                var item = $('#id_part_number').val().toUpperCase()
+                                var item = $('#id_part_number').val().toUpperCase() 
                                 var report = $('#id_which_report').val()
-                                $("#id_which_report").change(function(){
+                                $("#id_which_report").change(function(){ // Also make sure the link updates when the which_report field changes
                                     var report = $('#id_which_report').val()
-                                    console.log(item)
-                                    console.log(report)
-                                    submitbutton.value = "Generate Report for " +data;
-                                    var hrefStr = report + '/' + item
-                                    $('a[id=reportlink]').attr("href", hrefStr);
+                                    var hrefStr = report + '/' + item // string for href value
+                                    $('a[id=reportlink]').attr("href", hrefStr); // Update the href attr of the anchor on top of submit button
                                 });
-                                //itemdesc.innerText = data;
-                                submitbutton.value = "Generate Report for " +data;
+                                submitbutton.value = "Generate Report for " +data; // Change submit button display text
                                 var hrefStr = report + '/' + item
                                 $('a[id=reportlink]').attr("href", hrefStr);
                                 
                         })
-                            .fail(function() {
+                            .fail(function() { // err handle
                                 console.log("Part Number field is blank or not found");
                                 $('#id_itemdesc').val("")
                             })
                     },
-                    select: function( event , ui ) {
-                        var item = ui.item.label.toUpperCase()
-                        $.getJSON('itemcodedesc_request/',{item:item}, 
+                    select: function( event , ui ) { // Autofill desc when select event happens to the part_number field 
+                        var item = ui.item.label.toUpperCase() // Make sure the part_number field is uppercase
+                        $.getJSON('itemcodedesc_request/',{item:item}, // send json request with part number in request url
                             function(data) {
                                 var item = $('#id_part_number').val().toUpperCase()
                                 var report = $('#id_which_report').val()
-                                $("#id_which_report").change(function(){
+                                $("#id_which_report").change(function(){ // Also make sure the link updates when the which_report field changes
                                     var report = $('#id_which_report').val()
-                                    submitbutton.value = "Generate Report for " +data;
-                                    var hrefStr = report + '/' + item
-                                    $('a[id=reportlink]').attr("href", hrefStr);
+                                    var hrefStr = report + '/' + item  // string for href value
+                                    $('a[id=reportlink]').attr("href", hrefStr); // Update the href attr of the anchor on top of submit button
                                 });
-                                //itemdesc.innerText = data;
-                                submitbutton.value = "Generate Report for " +data;
+                                submitbutton.value = "Generate Report for " +data; // Change submit button display text
                                 var hrefStr = report + '/' + item
-                                $('a[id=reportlink]').attr("href", hrefStr);
+                                $('a[id=reportlink]').attr("href", hrefStr); // Update the href attr of the anchor on top of submit button
                         })
                             .fail(function() {
                                 console.log("Part Number field is blank or not found");
@@ -105,7 +98,6 @@
                             })
                     },
                 });
-            //please dont judge me
                 
             });
         } catch (pnError) {
