model labels + starting work on async fill for forklift serial

--- a/app/core/templates/core/checklistlog.html
+++ b/app/core/templates/core/checklistlog.html
@@ -46,4 +46,18 @@
             //Fix for validation reload to re-check all boxes previously checked by the user
             $("input[checked]").click();
     </script>
+    <!-- autofill that sweet sweet serial -->
+    <script>
+        $( 'select[name="unit_number"]' ).change(function() { 
+            console.log("select");
+            var item = $('select[name="unit_number"]').val();
+            $.getJSON('forkliftserial_request/',{item:item}, // send json request with forklift unit number in request url
+                    function(data) {
+                        $('id_serial_number').val(data); // Update desc value
+                    })                       
+                    .fail(function() { // err handle
+                        console.log("forklift id field is blank");
+                    });
+            });
+    </script>
 {% endblock content %}
