--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,7 +30,7 @@
                         <div class="collapse navbar-collapse" id="navbarToggle">
                             <ul class="navbar-nav mr-auto">
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/core/safetychecklist">Forklift Checklist</a>
+                                    <a class="nav-link" href="/core/forkliftchecklist">Forklift Checklist</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="/core/blendthese">Blends</a>
