--- a/app/core/static/core/main.css
+++ b/app/core/static/core/main.css
@@ -7,6 +7,11 @@ body {
   h1, h2, h3, h4, h5, h6 {
     color: #444444;
   }
+
+  thead { 
+    color:#ffffff;
+    background-color: #5f788a;
+  }
   
   ul {
     margin: 0;
