--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <link rel="stylesheet" type="text/css" href="{% static 'core/main.css' %}">
         {% block title %}<title>The Blendverse</title>{% endblock %}
-        
+
         {% block scripts %}{% endblock %}
 
     </head>
@@ -32,14 +32,29 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="/core/forkliftchecklist">Forklift Checklist</a>
                                 </li>
+                                {% if user.is_staff %}
                                 <li class="nav-item">
-                                    <a class="nav-link" href="/core/blendthese">Blends</a>
+                                    <a class="nav-link" href="/core/blendthese">Blend Shortages</a>
                                 </li>
                                 <li class="nav-item">    
                                     <a class="nav-link" href="/core/lotnumrecords">Lot Numbers</a>
                                 </li>
+                                {% endif %}
                                 <li class="nav-item">    
                                     <a class="nav-link" href="/core/reports">Reports</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Blend Schedules
+                                    </a>
+                                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                      <li><a class="dropdown-item" href="/core/blendschedule/Desk1">Desk 1</a></li>
+                                      <li><a class="dropdown-item" href="/core/blendschedule/Desk2">Desk 2</a></li>
+                                      <li><a class="dropdown-item" href="/core/blendschedule/Horix">Horix</a></li>
+                                      <li><a class="dropdown-item" href="/core/blendschedule/DmTotePail">Drums, Totes, Pails</a></li>
+                                      <li><hr class="dropdown-divider"></li>
+                                      <li><a class="dropdown-item" href="/core/blendschedule/all">All Blends</a></li>
+                                    </ul>
                                 </li>
                             <!---admin nav link only appears if an admin is logged in-->
                                 {% if user.is_staff %}
@@ -65,7 +80,7 @@
                 <div class="col-md-12">
                 {% block content %}{% endblock %}
                 </div>
-                
+
             </div>
         </main>
     </body>
